[gd_scene load_steps=2 format=3 uid="uid://c5dxg0k1tihbq"]

[ext_resource type="Script" path="res://Bullets/BulletSpawner.gd" id="1_mfu2b"]

[node name="BulletSpawner" type="Node2D"]
script = ExtResource("1_mfu2b")
bullets_per_second = 4.0
bullets_per_gap = 4
rotation_speed = 1.047

[node name="BulletSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="BulletSpawnTimer" to="." method="_on_bullet_spawn_timer_timeout"]
